Bug fixed: autogenerated .h files not copied by 'make install'

--- a/doc/mimerunner.1
+++ b/doc/mimerunner.1
@@ -1,8 +1,8 @@
 .TH MIMERUN "1" "2015-09-25" "mimerun 0.9" "User Commands"
 .SH NAME
-mimerun - mail and mbox parser and dumper
+mimerunner - mail and mbox parser and dumper
 .SH SYNOPSIS
-.B mimerun
+.B mimerunner
 [-v] [-h] [-s] [-d] [-o folder to unpack] files...
 .SH DESCRIPTION
 .PP
@@ -39,11 +39,11 @@ Please report any bugs or feature requests to
 .SH EXAMPLE
 $ # Using the default directory dump mode to outfolder, parse mbox file, no errors displayed.
 .br
-$ ./mimerun -s -o outfolder mbox
+$ ./mimerunner -s -o outfolder mbox
 .br
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-mimerun(3)
+mimerunner(3)
 .SH "LICENSE AND COPYRIGHT"
 .IX Header "LICENSE AND COPYRIGHT"
 Copyright 2015 Dmitry Lobashevsky.
